# tyranno

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  install_manifest.txt  thirdparty_build.sh
include/: StringTree.hpp  TRError.hpp  TR_DEFINE.hpp
include/network/: TRTcpAcceptor.hpp  TRTcpConnector.hpp  TRTcpEndPoint.hpp  TRTcpSocket.hpp
include/protocol/: TRProtocol.hpp  TRProtocolBodyInterface.hpp  TRProtocolExit.hpp  TRProtocolExitRequest.hpp  TRProtocolExitResponse.hpp  TRProtocolHeaderInterface.hpp  TRProtocolInterface.hpp  TRProtocolMuxing.hpp  TRProtocolMuxingRequest.hpp  TRProtocolMuxingResponse.hpp  TRProtocolRegist.hpp  TRProtocolRegistRequest.hpp  TRProtocolRegistResponse.hpp  TRProtocolRequestHeader.hpp  TRProtocolResponseHeader.hpp  TRProtocolTranscoding.hpp  TRProtocolTranscodingRequest.hpp  TRProtocolTranscodingResponse.hpp  TR_PROTOCOL_TYPE.hpp
include/util/: TRByteBuffer.hpp
include/video/: TRCodec.hpp  TRCodecID.hpp  TRCodecManager.hpp  TRCodecParameters.hpp  TRDecodeCodec.hpp  TRDecoder.hpp  TREncodeCodec.hpp  TREncoder.hpp  TRFrame.hpp  TRRawFrame.hpp  TRStreamIndex.hpp  TRVideo.hpp  TRVideoReader.hpp  TRVideoWriter.hpp  TR_TYPE.hpp  TR_VIDEO_TYPE.hpp
src/: CMakeLists.txt
src/network/linux/: CMakeLists.txt  TRTcpAcceptor.cpp  TRTcpConnector.cpp  TRTcpEndPoint.cpp  TRTcpSocket.cpp
src/protocol/: CMakeLists.txt  TRProtocol.cpp  TRProtocolBodyInterface.cpp  TRProtocolExit.cpp  TRProtocolExitRequest.cpp  TRProtocolExitResponse.cpp  TRProtocolHeaderInterface.cpp  TRProtocolInterface.cpp  TRProtocolMuxing.cpp  TRProtocolMuxingRequest.cpp  TRProtocolMuxingResponse.cpp  TRProtocolRegist.cpp  TRProtocolRegistRequest.cpp  TRProtocolRegistResponse.cpp  TRProtocolRequestHeader.cpp  TRProtocolResponseHeader.cpp  TRProtocolTranscoding.cpp  TRProtocolTranscodingRequest.cpp  TRProtocolTranscodingResponse.cpp
src/server/: CMakeLists.txt
src/util/: CMakeLists.txt  TRByteBuffer.cpp
src/video/: CMakeLists.txt  TRCodec.cpp  TRCodecID.cpp  TRCodecManager.cpp  TRCodecParameters.cpp  TRDecodeCodec.cpp  TRDecoder.cpp  TREncodeCodec.cpp  TREncoder.cpp  TRFrame.cpp  TRRawFrame.cpp  TRStreamIndex.cpp  TRVideo.cpp  TRVideoReader.cpp  TRVideoWriter.cpp
test/: CMakeLists.txt  TEST_DEFINE.hpp  TRByteBuffer_TEST.cpp  TRProtocolBody_TEST.cpp  TRProtocolHeader_TEST.cpp  TRVideoDecode_TEST.cpp  TRVideo_TEST.cpp  main.cpp  test.out
